--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: Run tests
-          command: pytest test_calc.py
+          command: pytest CircleCI_Repo\test_calc.py
 
 workflows:
   version: 2
