--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
+          command: pip install pytest --user
       - run:
           name: Run tests
           command: pytest CircleCI_Repo\test_calc.py
