--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
-          command: pip install pytest --user
+          command: python -m pip install pytest
       - run:
           name: Run tests
           command: pytest CircleCI_Repo\test_calc.py
