--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Install dependencies
           command: 
             pip install -r requirements.txt
-            pip install pytest
+            #pip install pytest
       - run:
           name: Run tests
           command: pytest CircleCI_Repo\test_calc.py
