Debug because I added code in folder so I need to change the directory in the config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: pip install pytest
       - run:
           name: Run tests
-          command: pytest test_calc.py
+          command: pytest Continuous_Integration_Activty/test_calc.py
 
 workflows:
   version: 2
