--- a/Continuous_Integration_Activity/.circleci/config.yml
+++ b/Continuous_Integration_Activity/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: pip install pytest
       - run:
           name: Run tests
-          command: pytest Continuous_Integration_Activity/test_calc.py
+          command: pytest test_calc.py
 
 workflows:
   version: 2
