--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: pip install pytest
       - run:
           name: Run tests
-          command: pytest test_calc.py
+          command: pytest Continuoustest_calc.py
 
 workflows:
   version: 2
